@@ -30,13 +30,13 @@ function squirrelmail_plugin_init_message_details()
  * @access private
  */
 function show_message_details(&$links) {
-    global $passed_id, $mailbox, $ent_num;
+    global $passed_id, $mailbox, $passed_ent_id;
     
     if (strlen(trim($mailbox)) < 1) {
         $mailbox = 'INBOX';
     }
 
-    $params = '?passed_ent_id=' . $ent_num .
+    $params = '?passed_ent_id=' . $passed_ent_id .
               '&mailbox=' . urlencode($mailbox) .
               '&passed_id=' . $passed_id;
 
